# AcWars

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: main.rs
src/modules/: animation.rs  battle_ui.rs  collisions.rs  kdtree.rs  mod.rs  player.rs  projectile.rs  ship.rs  spatial_hash.rs
src/modules/abilities/: dash.rs  doubleshot.rs  haste.rs  laser.rs  mod.rs  movement.rs  no_ability.rs  projectile_speed.rs  shatter.rs  shield.rs  singleshot.rs  sun_damage.rs
src/modules/areas/: astroid_field.rs  benchmark.rs  mod.rs  solar_system.rs
src/modules/buffs/: max_speed_buff.rs  mod.rs  phase_buff.rs  speed_buff.rs
src/modules/controllers/: ability_spam_ai.rs  floating_ai.rs  idle_ai.rs  mod.rs
src/modules/entities/: astroid.rs  brew.rs  mod.rs  ship.rs  sun.rs  wall.rs
src/modules/entities/sections/: hull.rs  hull_material.rs  mod.rs  modular_slots.rs  repair_bay.rs  thruster.rs  weapon_mount.rs  wing.rs
src/modules/projectiles/: aoe.rs  ftpl.rs  gob.rs  laser_beam.rs  mod.rs
src/modules/scenes/: battle_screen.rs  benchmark_screen.rs  load_screen.rs  mod.rs  ship_select_screen.rs
src/modules/ui/: ability_switch_ui.rs  ability_ui.rs  mod.rs  options_ui.rs  pause_ui.rs  ship_module_viewer.rs  ship_select_ui.rs
