[package]
name = "acwars"
version = "0.0.1"
authors = ["Lilith645 <lilith@inet-sys.com>"]
edition = "2018"

[dependencies]
maat_graphics = { path = "./Maat-Graphics/" }
maat_input_handler = { path = "./Maat-InputHandler/" }
maat_gui = { path = "../Maat-Gui/" }
#maat_sound = { path = "./Maat-Sound/" }
rand = "0.6"
hlua = "*"
parking_lot = "0.9"
